Remove shopping gateway shared secret
